@@ -1,5 +1,6 @@
-2011-02-28  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-03-23  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* gdb.py: Ignore 'sigint' or 'quit' command on startup.
 	* gdb.py gdbmi.py debugger.py posix.py: On gdb abnormal termination,
 	save the project file and forcibly terminate the current session.
 	* gdbmi.py: Set breakpoint in a template function.
